# rust-learn-grpc-with-tonic-seaorm

./: .env  .gitignore  Cargo.toml  Makefile  build.rs  diesel.toml  example.env
deployments/sql/: Dockerfile
deployments/sql/data/sql-db-master-node/: 000549.sst  000551.sst  IDENTITY  MANIFEST-000015  OPTIONS-000018  cockroach.advertise-addr  cockroach.http-addr  temp-dirs-record.txt
deployments/sql/data/sql-db-master-node/cockroach-temp979103684/: IDENTITY  OPTIONS-000005
entity/: Cargo.toml
entity/src/: user.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220702_212914_users.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2021-12-21-143615_users/: up.sql
migrations/2022-01-04-191926_todo/: up.sql
migrations/2022-01-07-203911_update_users_model/: up.sql
migrations/2022-01-07-205530_add_new_users_model/: up.sql
protos/user_management/: users.proto
src/: main.rs
src/api/: mod.rs
src/api/user_management/: mod.rs  users_v1.rs
src/cmd/: crud.rs  mod.rs  root.rs
src/cmd/users/: client.rs  controller.rs  handler.rs  mappers.rs  mod.rs  model.rs  rpc.rs
src/dao/: schema.rs
src/util/: hasher.rs
