[package]
name = "rust-learn-grpc-with-tonic"
version = "0.1.0"
edition = "2021"

exclude = ["deployments/**"]

[dependencies]
prost = "0.9"
tonic = "0.6"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
diesel = {version = "1.4.5", features = ["postgres", "r2d2", "uuidv07"] }
diesel_codegen = {version = "*", features = ["postgres"]}
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = "1.0.100"
serde_derive = "1.0.100"
serde_json = "1.0.40"
r2d2_postgres = { version = "0.18.1" }
r2d2 = { version = "0.8.9" }
validator = { version = "0.12", features = ["derive"] }
rust-argon2 = "0.8"
log = "0.4.0"
env_logger = "0.8.4"

[build-dependencies]
tonic-build = "0.6"
