[package]
name = "sea-orm-tonic-example"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
tonic = "0.7"
tokio = { version = "1.17", features = ["macros", "rt-multi-thread", "full"] }
entity = { path = "entity" }
migration = { path = "migration" }
prost = "0.10.0"
serde = "1.0"
validator = { version = "0.12", features = ["derive"] }
log = "0.4.0"
env_logger = "0.8.4"
futures = "0.3"
async-trait = "0.1.56"
clap = { version = "3.1.6", features = ["derive"] }


[dependencies.sea-orm]
version = "^0.8.0"
features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
]

[build-dependencies]
tonic-build = "0.7"
